--- a/index.html
+++ b/index.html
@@ -13,39 +13,54 @@
             padding: 0;
             margin: 0;
         }
+
         body, html{
             width: 100%;
             height: 100%;
-            background-color: rgb(4, 0, 255);
+            display: flex;
+            justify-content: center;
+            background-color: rgb(0, 0, 0);
         }
 
         .main-container{
-            height: 100vh;
+            margin-top: 40px;
+            padding: 20px;
+            background-color: rgb(247, 216, 216);
+            max-width: 900px;
+            height: 700px;
             display: grid;
             grid-template-columns: 1fr 1fr;
         }
+
         /* game-board */
         .game-board{
-            margin: 30px;
-            /* width: 100%;
-            height: 100%; */
             border: solid 3px;
-            background-color: rgb(255, 255, 255);
+            background-color: rgb(12, 11, 11);
         }
 
         /* game-info */
         .game-info{
-            background-color: rgb(73, 207, 40);
+            padding: 10px;
+            background-color: rgba(255, 118, 6, 0.884);
+            height: 92%;
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content:space-between;
         }
 
         .info-detail{
-            margin-top: 50px;
+            margin: 20px 0;
+            height: 390px;
         }
 
-        .info-detail > * {
+        .title{
+            margin: 10px 0;
+            height: 50px;
+        }
+
+        .info-detail > p {
+            height: 30px;
             margin: 10px 5px;
         }
 
@@ -56,16 +71,18 @@
         }
 
         .play-btn{
-            background-color: rgb(224, 36, 36);
+            background-color: rgb(255, 255, 255);
             width: 100px;
             height: 60px;
+            margin: 20px;
         }
+
         .play-btn:hover {
             cursor: pointer;
             transform: scale(1.05);
         }
     </style>
-    <script type="module" src="./js/main.js" defer></script>
+    <script type="module" src="./dist/main.js" defer></script>
 </head>
 <body>
     <main class="main-container">
@@ -73,7 +90,7 @@
 
         <div class="game-info">
             <div class="info-detail">
-                <h1>TETRIS</h1>
+                <h1 class="title">TETRIS</h1>
                 <p>score : <span class="game-score">0</span></p>
                 <p>level : <span class="game-level">0</span></p>
                 <canvas id="next" class="next"></canvas>
