--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         #next{
             margin-top: 15px;
-            border: solid 2px wheat;
+            border: solid 2px black;
             background-color: rgb(48, 44, 44);
         }
 
