키보드 이벤트

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         .main-container{
             margin-top: 40px;
             padding: 20px;
-            background-color: rgb(247, 216, 216);
+            background-color: rgb(68, 141, 0);
             max-width: 900px;
             height: 700px;
             display: grid;
@@ -34,8 +34,8 @@
 
         /* game-board */
         .game-board{
-            border: solid 3px;
-            background-color: rgb(12, 11, 11);
+            border: solid 1px white;
+            background-color: rgb(65, 60, 60);
         }
 
         /* game-info */
@@ -66,7 +66,7 @@
 
         #next{
             margin-top: 15px;
-            border: solid 2px black;
+            border: solid 1px rgb(255, 255, 255);
             background-color: rgb(48, 44, 44);
         }
 
