--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
 
         <div class="game-info">
             <div class="info-detail">
-                <p>score : <span class="game-score">0</span></p>
-                <p>level : <span class="game-level">0</span></p>
+                <p>score : <span id="score" class="game-score">0</span></p>
+                <p>level : <span id="level" class="game-level">0</span></p>
+                <p>lines : <span id="lines" class="game-lines">0</span></p>
                 <canvas id="next" class="next"></canvas>
             </div>
             <button class="play-btn">PLAY</button>
