게임  중단후 다시시작

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
+    <a  href="/score/board">
+        <div class="score-board__btn">score board</div>
+    </a>
     <main class="main-container">
         <canvas id="board" class="game-board"></canvas>
 
@@ -23,10 +26,7 @@
         </div>
 
         <div>
-            <h1 style="color:rgb(130, 128, 138);">TETRIS</h1>
-            <a style="text-decoration: none;" href="/score/board">
-                <div class="score-board__btn">score board</div>
-            </a>
+            <h1 style="color:rgb(130, 128, 138); padding-top: 10px;">TETRIS</h1>
         </div>
     </main>
 
